# Swoosh

./: .env.example  .gitignore  PROJECT_DESCRIPTION.md  README.md  Swoosh.md
backend/: .env.example  .eslintrc.json  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  package-lock.json  package.json  setup.sh
backend/prisma/: schema.prisma
backend/src/: index.ts  server.ts
backend/src/config/: index.ts
backend/src/db/: prisma.ts  redis.ts
backend/src/routes/: analytics.ts  ccip.ts  dex.ts  events.ts  health.ts  intents.ts  websocket-enhanced.ts  websocket.ts
backend/src/services/: analytics-cron.ts  ccip-event-listener.ts  ccip-manager.ts  dex-aggregator.ts  intent-event-monitor.ts  intent-parser.ts  route-optimizer.ts  websocket-manager.ts
backend/src/types/: index.ts
contracts/: Cargo.toml  Stylus.toml  rust-toolchain.toml
contracts/deploy/: .env.example  README.md  deploy.sh  setup-chains.sh  setup-tokens.sh  test-flow.sh  update-env.sh  verify.sh
contracts/src/: intent_validator.rs  lib.rs  main.rs  route_executor.rs  settlement_verifier.rs  simple_test.rs
contracts/tests/: intent_validator_tests.rs  route_executor_tests.rs  settlement_verifier_tests.rs
docs/: DEPLOYMENT.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
solidity-contracts/: foundry.toml
solidity-contracts/script/: Deploy.s.sol
solidity-contracts/src/: IntentValidator.sol  RouteExecutor.sol  SettlementVerifier.sol
(+83 files in other folders)
