[package]
name = "swoosh-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.10"
alloy-primitives = "0.8"
alloy-sol-types = "1.3"
mini-alloc = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
ethers = "2.0"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"

[lib]
crate-type = ["cdylib"]
